commit after SEPM Project review

--- a/aboutus.html
+++ b/aboutus.html
@@ -72,7 +72,7 @@ body {
 <br /><h1 style="background-color: #FF8300" class="style1"><span>&nbsp &nbsp Project by &nbsp &nbsp</span></h1>		
 	<div class="contact-main"><br>
        
-            <h1 class="style6"><a><b>&nbsp &nbsp &nbsp Pavan S. Patil  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Sinhgad Academy of Engineering, Kondhwa Bk. Pune,<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Dept. of Information Technology (Third Year 2020-2021)<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Subject - SEPM (Prof. P. S. Bangare)</a></h1>	
+            <h1 class="style6"><a><b>&nbsp &nbsp &nbsp Pavan S. Patil & &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Sinhgad Academy of Engineering, Kondhwa Bk. Pune,<br>&nbsp &nbsp &nbsp Gopal Paraskar &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Dept. of Information Technology (Third Year 2020-2021)<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Subject - SEPM (Prof. P. S. Bangare)</a></h1>	
 		 
     </div>
 	<br><br><br>
