--- a/emailus.html
+++ b/emailus.html
@@ -63,6 +63,9 @@ body {
 		Mobile no.<br>
       	<input type="text" name="mobile"><br>
 		
+		Address<br>
+      	<input type="text" name="address"><br>
+		
 		Email<br>
 	<input type="text" name="email"><br>
 	
