--- a/emailus.html
+++ b/emailus.html
@@ -28,7 +28,7 @@ body {
 <body>
 
 <div class="btn-group">
-  <button class="button" onclick = "document.location='home.html'">Home</button>
+  <button class="button" onclick = "document.location='index.html'">Home</button>
   <button class="button" onclick = "document.location='skins.html'">Skins & Designs</button>
   <button class="button" onclick = "document.location='services.html'">services</button>
   <button class="button" onclick = "document.location='aboutus.html'">About us</button>
