--- a/skins.html
+++ b/skins.html
@@ -25,7 +25,7 @@ body {
         
 
 <div class="btn-group">
-  <button class="button" onclick = "document.location='home.html'">Home</button>
+  <button class="button" onclick = "document.location='index.html'">Home</button>
   <div class=	"btn-group1">
   <button class="button" onclick = "document.location='skins.html'">Skins & Designs</button>
   </div>
