--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ function showSlides(n) {
             
             <div class="column1">
             	<div align="center" class="style11" style="background-color:#FF8300" >My laptop isn’t connecting to Wi-Fi. Now What ?</div>
-              <p class="style7">First check to see if the Wi-Fi router on your laptop is turned ON. Look for the Wi-Fi button on your machine and switch it ON, if it is OFF. If your router is on and not connecting, reboot it. Still no connectivity then unplug the router for about is 10 seconds and plug it back in again.<a href="demo.html">Read More</a></p></div>
+              <p class="style7">First check if the Wi-Fi router on your laptop is turned ON. Look for the Wi-Fi button on your machine and switch it ON, if it is OFF. If your router is on and not connecting, reboot it. Still no connectivity then unplug the router for about is 10 seconds and plug it back in again.<a href="demo.html">Read More</a></p></div>
             
             <div class="column1">
             	<div align="center" class="style11" style="background-color:#FF8300" >Laptop is slow? How to Boost the speed?</div>
